# Cobaia-Manutencao

./: .gitignore
Forca/: API.txt  CMakeLists.txt
Forca/include/: banners.h  hangman_core.h  plataform.h  utils.h
Forca/src/: hangman_core.c  main.c
